force-app/main/default/objects/Vehiculo__c/Vehiculo__c.object-meta.xml
<CustomObject>
    <description>Vehículos de autolote. Utilizados en el proceso de compra y/o venta de autos usados</description>
    <label>Vehículo</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehículos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>