force-app/main/default/objects/Vehiculo__c/fields/AU__c.field-meta.xml
<CustomField>
    <fullName>AU__c</fullName>
    <label>AU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>