force-app/main/default/objects/Vehiculo__c/fields/Capacidad__c.field-meta.xml
<CustomField>
    <fullName>Capacidad__c</fullName>
    <label>Capacidad</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>