force-app/main/default/objects/Vehiculo__c/fields/Carta_de_venta__c.field-meta.xml
<CustomField>
    <fullName>Carta_de_venta__c</fullName>
    <label>Carta de venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>