force-app/main/default/objects/Vehiculo__c/fields/Cilindros__c.field-meta.xml
<CustomField>
    <fullName>Cilindros__c</fullName>
    <label>Cilindros</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>