force-app/main/default/objects/Vehiculo__c/fields/Circulacion__c.field-meta.xml
<CustomField>
    <fullName>Circulacion__c</fullName>
    <label>Circulación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>