force-app/main/default/objects/Vehiculo__c/fields/Combustible__c.field-meta.xml
<CustomField>
    <fullName>Combustible__c</fullName>
    <label>Combustible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gasolina</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>