force-app/main/default/objects/Vehiculo__c/fields/Cono__c.field-meta.xml
<CustomField>
    <fullName>Cono__c</fullName>
    <label>Cono</label>
    <length>255</length>
    <type>Text</type>
</CustomField>