force-app/main/default/objects/Vehiculo__c/fields/Contraoferta_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>Contraoferta_del_cliente__c</fullName>
    <description>Campo de va a utilizar como un action para cuando el cliente tenga un contrapropuesta de precio</description>
    <label>Contraoferta del cliente</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>