force-app/main/default/objects/Vehiculo__c/fields/Costo_total__c.field-meta.xml
<CustomField>
    <fullName>Costo_total__c</fullName>
    <formula>Costo__c + 600</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>