force-app/main/default/objects/Vehiculo__c/fields/Dias_en_el_inventario__c.field-meta.xml
<CustomField>
    <fullName>Dias_en_el_inventario__c</fullName>
    <formula>IF(
  ISPICKVAL(Estado__c, &quot;Vendido&quot;),
  Fecha_de_venta__c  - Fecha_de_ingreso__c,  
  TODAY() - Fecha_de_ingreso__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días en el inventario</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>