force-app/main/default/objects/Vehiculo__c/fields/Dias_en_sucursal__c.field-meta.xml
<CustomField>
    <fullName>Dias_en_sucursal__c</fullName>
    <formula>IF(
  ISPICKVAL(Estado__c, &quot;Vendido&quot;),
  Fecha_de_venta__c - Fecha_de_traslado__c,
  TODAY() -  Fecha_de_traslado__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días en sucursal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>