force-app/main/default/objects/Vehiculo__c/fields/Dias_reservado__c.field-meta.xml
<CustomField>
    <fullName>Dias_reservado__c</fullName>
    <formula>TODAY() - Fecha_de_reserva__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días reservado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>