force-app/main/default/objects/Vehiculo__c/fields/Equipado_con__c.field-meta.xml
<CustomField>
    <fullName>Equipado_con__c</fullName>
    <description>Detalle de los accesorios a los que viene el vehiculo</description>
    <label>Equipado con</label>
    <type>TextArea</type>
</CustomField>