force-app/main/default/objects/Vehiculo__c/fields/Estado_de_liquidez__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_liquidez__c</fullName>
    <label>Estado de liquidez</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traslado a Dollar</fullName>
            </value>
            <value>
                <fullName>Vendido</fullName>
            </value>
            <value>
                <fullName>Disponible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>