force-app/main/default/objects/Vehiculo__c/fields/Evaluador__c.field-meta.xml
<CustomField>
    <fullName>Evaluador__c</fullName>
    <label>Evaluador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>