force-app/main/default/objects/Vehiculo__c/fields/Fecha_de_reserva__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_reserva__c</fullName>
    <label>Fecha de reserva</label>
    <type>Date</type>
</CustomField>