force-app/main/default/objects/Vehiculo__c/fields/Fecha_de_traslado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_traslado__c</fullName>
    <label>Fecha de traslado</label>
    <type>Date</type>
</CustomField>