force-app/main/default/objects/Vehiculo__c/fields/Fecha_de_venta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_venta__c</fullName>
    <label>Fecha de venta</label>
    <type>Date</type>
</CustomField>