force-app/main/default/objects/Vehiculo__c/fields/Kilometraje__c.field-meta.xml
<CustomField>
    <fullName>Kilometraje__c</fullName>
    <label>Kilometraje</label>
    <length>255</length>
    <type>Text</type>
</CustomField>