force-app/main/default/objects/Vehiculo__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marca</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Marcas</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Vehículos</relationshipLabel>
    <relationshipName>Vehiculos1</relationshipName>
    <type>Lookup</type>
</CustomField>