force-app/main/default/objects/Vehiculo__c/fields/Marca_texto_web__c.field-meta.xml
<CustomField>
    <fullName>Marca_texto_web__c</fullName>
    <description>El mismo campo de marca del vehiculo, en tipo texto alimentado por flow para que lo pueda consumir el plugin de la web de autolote</description>
    <label>Marca texto web</label>
    <length>25</length>
    <type>Text</type>
</CustomField>