force-app/main/default/objects/Vehiculo__c/fields/Margen__c.field-meta.xml
<CustomField>
    <fullName>Margen__c</fullName>
    <formula>Costo_total__c -  Precio_de_intercambio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>