force-app/main/default/objects/Vehiculo__c/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modelo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Modelo</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Vehículos (Modelo)</relationshipLabel>
    <relationshipName>Vehiculos</relationshipName>
    <type>Lookup</type>
</CustomField>