force-app/main/default/objects/Vehiculo__c/fields/Modelo_para_web__c.field-meta.xml
<CustomField>
    <fullName>Modelo_para_web__c</fullName>
    <description>Este campo es utilizado para el consumo de la api de autolote conectado a wordpress para la web</description>
    <label>Modelo para web</label>
    <length>50</length>
    <type>Text</type>
</CustomField>