force-app/main/default/objects/Vehiculo__c/fields/Motor__c.field-meta.xml
<CustomField>
    <fullName>Motor__c</fullName>
    <label>Motor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>