force-app/main/default/objects/Vehiculo__c/fields/Nombre_para_la_web__c.field-meta.xml
<CustomField>
    <fullName>Nombre_para_la_web__c</fullName>
    <description>Campo será alimentado por flow para indicar el modelo y aÑo del vehículo en el plugin de autolote conectado a salesforce</description>
    <label>Nombre para la web</label>
    <length>40</length>
    <type>Text</type>
</CustomField>