force-app/main/default/objects/Vehiculo__c/fields/Nuevos_precios__c.field-meta.xml
<CustomField>
    <fullName>Nuevos_precios__c</fullName>
    <label>Nuevos precios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>