force-app/main/default/objects/Vehiculo__c/fields/Observaciones_generales__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_generales__c</fullName>
    <label>Observaciones generales</label>
    <type>TextArea</type>
</CustomField>