force-app/main/default/objects/Vehiculo__c/fields/Observaciones_mecanicas__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_mecanicas__c</fullName>
    <label>Observaciones mecánicas</label>
    <type>TextArea</type>
</CustomField>