force-app/main/default/objects/Vehiculo__c/fields/Posee_mantenimiento__c.field-meta.xml
<CustomField>
    <fullName>Posee_mantenimiento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Posee mantenimiento?</label>
    <type>Checkbox</type>
</CustomField>