force-app/main/default/objects/Vehiculo__c/fields/Precio_Contact_Center__c.field-meta.xml
<CustomField>
    <fullName>Precio_Contact_Center__c</fullName>
    <description>Precio de seteo manual, para precios en la página web</description>
    <label>Precio Contact Center</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>