force-app/main/default/objects/Vehiculo__c/fields/Precio_cotizador__c.field-meta.xml
<CustomField>
    <fullName>Precio_cotizador__c</fullName>
    <description>Precio donde se alojará el resultado del cotizador externo (No es el precio definitivo)</description>
    <label>Precio cotizador</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>