force-app/main/default/objects/Vehiculo__c/fields/Precio_de_compra_aprobado_S_Autolote__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_compra_aprobado_S_Autolote__c</fullName>
    <description>Precio definitivo para oferta de compra de auto, lo llena el supervisor de compra</description>
    <label>Precio de compra aprobado S. Autolote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>