force-app/main/default/objects/Vehiculo__c/fields/Precio_de_intercambio__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_intercambio__c</fullName>
    <description>Precio especial (para venta) que se le da a un cliente cuando está dejando un usado y se va a llevar otro usado</description>
    <label>Precio de intercambio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>