force-app/main/default/objects/Vehiculo__c/fields/Precio_estimado__c.field-meta.xml
<CustomField>
    <fullName>Precio_estimado__c</fullName>
    <label>Precio estimado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>