force-app/main/default/objects/Vehiculo__c/fields/Precio_estimado_maximo__c.field-meta.xml
<CustomField>
    <fullName>Precio_estimado_maximo__c</fullName>
    <description>Precio máximo de preavaluo</description>
    <label>Precio estimado máximo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>