force-app/main/default/objects/Vehiculo__c/fields/Precio_estimado_minimo__c.field-meta.xml
<CustomField>
    <fullName>Precio_estimado_minimo__c</fullName>
    <description>Precio mínimo de preavaluo</description>
    <label>Precio estimado mínimo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>