force-app/main/default/objects/Vehiculo__c/fields/Precio_para_la_web__c.field-meta.xml
<CustomField>
    <fullName>Precio_para_la_web__c</fullName>
    <description>Precio utilizado para la api que esta conectada a la web de autolote</description>
    <label>Precio para la web</label>
    <length>20</length>
    <type>Text</type>
</CustomField>