force-app/main/default/objects/Vehiculo__c/fields/Precio_referencia__c.field-meta.xml
<CustomField>
    <fullName>Precio_referencia__c</fullName>
    <description>Precio de seteo manual, lo llena el avaluador para sugerir un precio de compra al supervisor de compra, no debe de ser exigido</description>
    <label>Precio referencia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>