force-app/main/default/objects/Vehiculo__c/fields/Precio_vendedor__c.field-meta.xml
<CustomField>
    <fullName>Precio_vendedor__c</fullName>
    <description>Precio aprobado para la venta, lo llena el supervisor de venta</description>
    <label>Precio vendedor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>