force-app/main/default/objects/Vehiculo__c/fields/Procedencia_2__c.field-meta.xml
<CustomField>
    <fullName>Procedencia_2__c</fullName>
    <label>Procedencia 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Procedencia__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trac</fullName>
            </value>
            <value>
                <fullName>Velosa</fullName>
            </value>
            <value>
                <fullName>Casa Pellas</fullName>
            </value>
            <value>
                <fullName>Kipesa</fullName>
            </value>
            <value>
                <fullName>Intercambio AN</fullName>
            </value>
            <value>
                <fullName>Intercambio AL</fullName>
            </value>
            <value>
                <fullName>Autolote</fullName>
            </value>
            <value>
                <fullName>Repuestos</fullName>
            </value>
            <value>
                <fullName>Autos Nuevos</fullName>
            </value>
            <value>
                <fullName>Talleres</fullName>
            </value>
            <value>
                <fullName>Go</fullName>
            </value>
            <value>
                <fullName>Consignacion</fullName>
            </value>
            <value>
                <fullName>Yamaha</fullName>
            </value>
            <value>
                <fullName>Presidencia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>