force-app/main/default/objects/Vehiculo__c/fields/Procedencia__c.field-meta.xml
<CustomField>
    <fullName>Procedencia__c</fullName>
    <label>Procedencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trac</fullName>
            </value>
            <value>
                <fullName>Leasing</fullName>
            </value>
            <value>
                <fullName>Intercambio</fullName>
            </value>
            <value>
                <fullName>Compra</fullName>
            </value>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Ciclo</fullName>
            </value>
            <value>
                <fullName>Consignacion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>