force-app/main/default/objects/Vehiculo__c/fields/Submodelo__c.field-meta.xml
<CustomField>
    <fullName>Submodelo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submodelo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Submodelo</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Vehículos (Submodelo)</relationshipLabel>
    <relationshipName>Vehiculos2</relationshipName>
    <type>Lookup</type>
</CustomField>