force-app/main/default/objects/Vehiculo__c/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <label>Sucursal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Esteli</fullName>
            </value>
            <value>
                <fullName>Matagalpa</fullName>
            </value>
            <value>
                <fullName>Chinandega</fullName>
            </value>
            <value>
                <fullName>Plaza España</fullName>
            </value>
            <value>
                <fullName>Leon</fullName>
            </value>
            <value>
                <fullName>Puerto Cabezas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>