force-app/main/default/objects/Vehiculo__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUV</fullName>
            </value>
            <value>
                <fullName>ST Wagon</fullName>
            </value>
            <value>
                <fullName>Sedan</fullName>
            </value>
            <value>
                <fullName>PickUp</fullName>
            </value>
            <value>
                <fullName>Pasajeros</fullName>
            </value>
            <value>
                <fullName>Panel</fullName>
            </value>
            <value>
                <fullName>Minivan</fullName>
            </value>
            <value>
                <fullName>Hatchback</fullName>
            </value>
            <value>
                <fullName>Ambulancia</fullName>
            </value>
            <value>
                <fullName>Camion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>