force-app/main/default/objects/Vehiculo__c/fields/Tipo_de_modelo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_modelo__c</fullName>
    <description>Campo utilizado en la cotizacion de autolote para indicar el tipo de modelo del vehiculo tal y como se indica en la documentacion</description>
    <label>Tipo de modelo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>