force-app/main/default/objects/Vehiculo__c/fields/Transmision__c.field-meta.xml
<CustomField>
    <fullName>Transmision__c</fullName>
    <label>Transmisión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automatico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>