force-app/main/default/objects/Vehiculo__c/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <description>Nombre de la persona que llevo a cabo el pre-avalúo del vehículo</description>
    <label>Vendedor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>