force-app/main/default/objects/Vehiculo__c/validationRules/Kilometraje_numerico.validationRule-meta.xml
<ValidationRule>
    <fullName>Kilometraje_numerico</fullName>
    <active>true</active>
    <description>El kilometraje debe ser numerico</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK( Kilometraje__c )),
  NOT(ISNUMBER( Kilometraje__c ))
)</errorConditionFormula>
    <errorDisplayField>Kilometraje__c</errorDisplayField>
    <errorMessage>El kilometraje debe ser un numero</errorMessage>
</ValidationRule>