force-app/main/default/objects/Vehiculo__c/validationRules/Limite_caracteres_en_Chasis.validationRule-meta.xml
<ValidationRule>
    <fullName>Limite_caracteres_en_Chasis</fullName>
    <active>false</active>
    <description>El Chasis debe tener exactamente 17 caracteres</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK(Chasis__c)),
 LEN(Chasis__c) &lt;&gt; 17
)</errorConditionFormula>
    <errorDisplayField>Chasis__c</errorDisplayField>
    <errorMessage>El Chasis debe tener exactamente 17 caracteres</errorMessage>
</ValidationRule>