force-app/main/default/objects/Vehiculo__c/validationRules/Placa_8_caracteres_maximo.validationRule-meta.xml
<ValidationRule>
    <fullName>Placa_8_caracteres_maximo</fullName>
    <active>true</active>
    <description>La placa debe contener como mucho 8 caracteres</description>
    <errorConditionFormula>LEN( Placa__c ) &gt; 8</errorConditionFormula>
    <errorDisplayField>Placa__c</errorDisplayField>
    <errorMessage>La placa debe contener 8 caracteres o menos</errorMessage>
</ValidationRule>