force-app/main/default/objects/Vehiculo__c/validationRules/Placa_sin_espacios.validationRule-meta.xml
<ValidationRule>
    <fullName>Placa_sin_espacios</fullName>
    <active>true</active>
    <description>La placa no debe contener espacios</description>
    <errorConditionFormula>CONTAINS(Placa__c, &quot; &quot;)</errorConditionFormula>
    <errorDisplayField>Placa__c</errorDisplayField>
    <errorMessage>La placa no debe contener espacios</errorMessage>
</ValidationRule>