force-app/main/default/objects/Vehiculo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Placa__c</columns>
    <columns>Evaluador__c</columns>
    <columns>Vendedor__c</columns>
    <columns>Cliente__c</columns>
    <columns>Precio_de_compra_aprobado_S_Autolote__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>