force-app/main/default/objects/Vehiculo__c/listViews/Vehiculos_libres.listView-meta.xml
<ListView>
    <fullName>Vehiculos_libres</fullName>
    <columns>NAME</columns>
    <columns>Anio_opcion__c</columns>
    <columns>Color__c</columns>
    <columns>Submodelo__c</columns>
    <columns>Sucursal__c</columns>
    <columns>Precio_vendedor__c</columns>
    <columns>Kilometraje__c</columns>
    <columns>Procedencia__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>contains</operation>
        <value>Libre</value>
    </filters>
    <label>Vehiculos libres</label>
</ListView>